fix overflow_2

--- a/scss/base/_animations.scss
+++ b/scss/base/_animations.scss
@@ -88,7 +88,7 @@
   }
   100% {
     left: 1500%;
-    top: 5%;
+    top: 3%;
     -webkit-transform: scale3d(1, 1, 1);
   }
 }
