--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -3,7 +3,7 @@
   background-image: url("./ressources/img/bg_day.webp");
   background-size: cover;
   background-position: left;
-  height: 100%;
+  height: 100vh;
   position: absolute;
   width: 100%;
   z-index: -1;
